Prior to doing again the sobol index plots

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -260,3 +260,26 @@
   publisher={Springer}
 }
 
+%R packages
+
+@article{DiceKriging,
+    title = {{DiceKriging}, {DiceOptim}: Two {R} Packages for the Analysis of Computer Experiments by Kriging-Based Metamodeling and Optimization},
+    author = {Olivier Roustant and David Ginsbourger and Yves Deville},
+    journal = {Journal of Statistical Software},
+    year = {2012},
+    volume = {51},
+    number = {1},
+    pages = {1--55},
+    url = {http://www.jstatsoft.org/v51/i01/},
+ }
+
+@manual{sensitivity,
+    title = {sensitivity: Global Sensitivity Analysis of Model Outputs},
+    author = {Gilles Pujol and Bertrand Iooss and Alexandre Janon with contributions from Khalid Boumhaout and Sebastien Da Veiga and Jana Fruth and Laurent Gilquin and Joseph Guillaume and Loic Le Gratiet and Paul Lemaitre and Bernardo Ramos and Taieb Touati and Frank Weber},
+    year = {2016},
+    note = {R package version 1.12.1},
+    url = {http://CRAN.R-project.org/package=sensitivity},
+ }
+
+
+
