continue to write the thesis

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -283,3 +283,9 @@
 
 
 
+@book{arora2015optimization,
+  title={Optimization: algorithms and applications},
+  author={Arora, Rajesh Kumar},
+  year={2015},
+  publisher={CRC Press}
+}
